Modified fixed for bug #6609 Created date in article is overlapping the loader icon.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Widget.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Widget.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.28 $
+ * @version     $Revision: 1.29 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -135,6 +135,10 @@ ul.Tablelike li.Header + li {
 
 .Loading > .Header h2 {
     background: url("../img/loader.gif") no-repeat right center;
+}
+
+.RTL .Loading > .Header h2 {
+    background: url("../img/loader.gif") no-repeat left center;
 }
 
 /**
